--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "iconic": "^0.1.16",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
