--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "create-rust-webpack": ".bin/create-rust-webpack.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "@wasm-tool/wasm-pack-plugin": "0.2.7",
+    "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
@@ -24,6 +28,7 @@
     "bootstrap": "^4.3.1",
     "iconic": "^0.1.16",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "recharts": "^1.5.0"
   }
 }
