--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "iconic": "^0.1.16",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.4",
     "recharts": "^1.5.0"
   }
 }
